--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-autosuggest": "^9.3.4",
     "react-chartjs-2": "2.7.0",
     "react-cropper": "1.0.1",
+    "react-css-modules": "^4.7.2",
     "react-dom": "16.2.0",
     "react-flip-move": "^3.0.1",
     "react-markdown": "3.3.0",
@@ -59,6 +60,7 @@
     "@types/react": "16.0.40",
     "@types/react-autosuggest": "^9.3.3",
     "@types/react-cropper": "0.10.2",
+    "@types/react-css-modules": "^4.6.1",
     "@types/react-dom": "16.0.4",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "4.2.4",
